--- a/platformio/servomotor_control/platformio.ini
+++ b/platformio/servomotor_control/platformio.ini
@@ -13,4 +13,8 @@ platform = espressif32
 board = nodemcu-32s
 monitor_speed = 115200
 framework = arduino
-lib_deps = adafruit/Adafruit PWM Servo Driver Library@^3.0.2
+lib_deps = 
+	arminjo/ServoEasing@^3.3.0
+	madhephaestus/ESP32Servo@^3.0.5
+	; adafruit/Adafruit PWM Servo Driver Library@^3.0.2
+	waspinator/AccelStepper@^1.64
