Updates regarding the game
Added automatic line detection, and corrected the distances of the ArUco markers to the first point.

--- a/.gitignore
+++ b/.gitignore
@@ -227,5 +227,8 @@ $RECYCLE.BIN/
 
 # Auxiliar files
 Practica_trayectorias.ipynb
+test_images/
+color_detection.py
+image_diff.py
 
 # End of https://www.toptal.com/developers/gitignore/api/python,platformio,windows,visualstudiocode
