Update project to the latest version

--- a/.gitignore
+++ b/.gitignore
@@ -230,5 +230,8 @@ Practica_trayectorias.ipynb
 test_images/
 color_detection.py
 image_diff.py
+main_gui.py
+trajectory_and_control.py
+assets/
 
 # End of https://www.toptal.com/developers/gitignore/api/python,platformio,windows,visualstudiocode
