New optimized version and calibration files added

--- a/.gitignore
+++ b/.gitignore
@@ -233,5 +233,6 @@ main_gui.py
 trajectory_and_control.py
 assets/
 python_esp32_communication.py
+cameraCalibration/Images/ChArUco\ Calibration/*.png
 
 # End of https://www.toptal.com/developers/gitignore/api/python,platformio,windows,visualstudiocode
